--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,8 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Noto Sans Mono', monospace;
+  color: var(--black);
+  background: var(--background);
 }
 
 a {
@@ -23,4 +25,15 @@ a {
     color: white;
     background: black;
   }
+}
+
+:root {
+  --black: #3b434e;
+  --white: white;
+  --primary: #7653fc;
+  --red: #fc836d;
+  --green: #1dc37e;
+  --light-green: #c8f8e4;
+  --background: #e5e5e5;
+  --font-family: 'Noto Sans Mono', monospace;
 }
