--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,8 +29,10 @@ a {
 
 :root {
   --black: #3b434e;
+  --light-gray: #ebebeb;
   --white: white;
   --primary: #7653fc;
+  --primary-hover: #5430e6;
   --red: #fc836d;
   --green: #1dc37e;
   --light-green: #c8f8e4;
