--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,7 @@ a {
 :root {
   --black: #3b434e;
   --light-gray: #ebebeb;
+  --dark-gray: #787d85;
   --white: white;
   --primary: #7653fc;
   --primary-hover: #5430e6;
