layout and styling of the HhData component.

--- a/components/HhData/HhData.module.css
+++ b/components/HhData/HhData.module.css
@@ -1,9 +1,75 @@
-.card {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
-  border-radius: 5px;
-  background: var(--white);
+.hh {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 30px;
 }
 
-.blur {
-  background: #f9f8ff;
+.count {
+  padding: 20px;
+  text-align: center;
+}
+
+.salary {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px 0;
+  padding: 20px;
+  text-align: center;
+}
+.salary > div {
+  border-right: 1px solid var(--light-gray);
+}
+.salary > div:last-child {
+  border-right: none;
+}
+.salaryValue {
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 35px;
+  margin-bottom: 10px;
+}
+
+.title {
+  margin-bottom: 10px;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 27px;
+}
+
+.countValue {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 39px;
+  color: var(--primary);
+}
+
+.rate {
+  display: grid;
+  grid-template-columns: repeat(3, 20px);
+  gap: 10px;
+  justify-content: center;
+}
+
+.filled circle {
+  fill: var(--red);
+}
+
+@media screen and (max-width: 1200px) {
+  .hh {
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (max-width: 640px) {
+  .salary {
+    grid-template-columns: 1fr;
+  }
+  .salary > div {
+    border-right: none;
+    border-bottom: 1px solid var(--light-gray);
+    padding-bottom: 20px;
+  }
+  .salary > div:last-child {
+    padding-bottom: 0;
+    border-bottom: none;
+  }
 }
