--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -117,3 +117,22 @@
   border-left: 2px solid var(--red);
   padding-left: 15px;
 }
+
+.characteristics {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  gap: 10px;
+  align-items: felx-end;
+  padding-right: 60px;
+  font-size: 16px;
+  line-height: 32px;
+}
+
+.characteristicsName {
+  font-weight: bold;
+}
+
+.characteristicsDots {
+  border-bottom: 1px dashed var(--light-gray);
+  margin-bottom: 10px;
+}
