Form error handling for Rating.

--- a/components/Rating/Rating.module.css
+++ b/components/Rating/Rating.module.css
@@ -8,3 +8,14 @@
 .editable {
   cursor: pointer;
 }
+
+.errorMessage {
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  color: var(--red);
+}
+
+.error svg {
+  stroke: var(--red);
+}
