--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,6 +36,7 @@ a {
   --primary: #7653fc;
   --primary-hover: #5430e6;
   --red: #fc836d;
+  --light-red: #f2a79a;
   --green: #1dc37e;
   --light-green: #c8f8e4;
   --background: #e5e5e5;
