--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -148,6 +148,10 @@
   padding: 30px;
 }
 
+.priceTitle a {
+  color: var(--primary);
+}
+
 @media screen and (max-width: 1320px) {
   .product {
     grid-template-columns: 70px 30px auto 40px auto 40px 1fr;
