Made menu animation.

--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -33,13 +33,7 @@
   line-height: 16px;
 }
 .secondLevelBlock {
-  display: none;
-}
-.secondLevelBlockOpened {
-  display: block;
-}
-.secondLevelBlockOpened:last-child {
-  margin-bottom: 25px;
+  overflow: hidden;
 }
 
 .thirdLevel {
