--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -7,7 +7,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
   border-radius: 5px;
   font-family: var(--font-family);
-  font-size: 16px; /*fix*???????*/
+  font-size: 16px;
   line-height: 22px;
 }
 
