--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   display: grid;
-  grid-template-columns: auto 230px minmax(320px, 1200px) auto; /*fix??????????????*/
+  grid-template-columns: auto 230px minmax(320px, 1200px) auto;
   grid-template-rows: auto 1fr auto;
   grid-template-areas:
     '. header header .'
@@ -12,7 +12,6 @@
 
 .header {
   grid-area: header;
-  display: none;
 }
 .sidebar {
   grid-area: sidebar;
@@ -31,9 +30,7 @@
       'header'
       'body'
       'footer';
-  }
-  .header {
-    display: block;
+    gap: 10px;
   }
   .sidebar {
     display: none !important;
