Color availability. Changing colors on a website using the Lighthouse tool in chrome.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,13 +31,13 @@ a {
   --black: #3b434e;
   --gray: #a4a4a4;
   --light-gray: #ebebeb;
-  --dark-gray: #787d85;
+  --dark-gray: #62666c;
   --white: white;
-  --primary: #7653fc;
+  --primary: #694adf;
   --primary-hover: #5430e6;
   --red: #fc836d;
   --light-red: #f2a79a;
-  --green: #1dc37e;
+  --green: #007b48;
   --light-green: #c8f8e4;
   --background: #e5e5e5;
   --font-family: 'Noto Sans Mono', monospace;
