--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -8,6 +8,12 @@
   font-size: 18px;
   line-height: 25px;
 }
+
+.firstLevelList {
+  list-style: none;
+  padding: 0;
+}
+
 .firstLevelActive,
 .firstLevel:hover {
   color: var(--primary);
@@ -20,8 +26,9 @@
 .secondBlock {
   margin-top: 15px;
   margin-left: 12px;
-  padding-left: 32px;
+  padding: 0 0 0 32px;
   border-left: 1px solid #dfdfdf;
+  list-style: none;
 }
 .secondLevel {
   margin-bottom: 10px;
@@ -30,9 +37,14 @@
   color: var(--dark-gray);
   font-weight: 300;
   font-size: 12px;
+  background: none;
+  border: none;
+  padding: 0;
 }
 .secondLevelBlock {
   overflow: hidden;
+  list-style: none;
+  padding: 0;
 }
 
 .thirdLevel {
